sandbox/output
StockProfit.cpp:9:23: error: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Werror,-Wsign-compare]
    for (int i = 0; i < prices_.size(); ++i) {
                    ~ ^ ~~~~~~~~~~~~~~
1 error generated.
make: *** [test] Error 1
